# Aqua

./: .clang-format  .editorconfig  .gitignore  .ninja_deps  .ninja_log  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  aarch64_2include_2video_2tty_8h.html  aarch64_2include_2video_2tty_8h.js  aarch64_2include_2video_2tty_8h_source.html  aarch64_2raspi3_2kernel_8c.html  aarch64_2raspi3_2kernel_8c.js  aarch64_2raspi3_2kernel_8c_source.html  annotated.html  annotated_dup.js  aqua  arch_2i686_2devices_2ps2_2keyboard_2keyboard_8c.html  arch_2i686_2devices_2ps2_2keyboard_2keyboard_8c.js  arch_2i686_2devices_2ps2_2keyboard_2keyboard_8c_source.html  arch_2i686_2include_2devices_2ps2_2keyboard_2keyboard_8h.html  arch_2i686_2include_2devices_2ps2_2keyboard_2keyboard_8h.js  arch_2i686_2include_2devices_2ps2_2keyboard_2keyboard_8h_source.html  arm32_2include_2devices_2platform-defaults_8h.html  arm32_2include_2devices_2platform-defaults_8h_source.html  arm32_2include_2video_2tty_8h.html  arm32_2include_2video_2tty_8h.js  arm32_2include_2video_2tty_8h_source.html  arm32_2raspi2_2kernel_8c.html  arm32_2raspi2_2kernel_8c.js  arm32_2raspi2_2kernel_8c_source.html  arm32_2video_2tty_8c.html  arm32_2video_2tty_8c.js  arm32_2video_2tty_8c_source.html  build.py  build.sh  change_style.sh  classes.html  (+415 more)
boot/: build.py  stage1.asm
core/: .#config.h  CMakeLists.txt  config.h  kernel.c  meson.build
core/arch/i686/: flags.cmake  meson.build
core/arch/i686/pc/: linker.ld  meson.build
core/cpu/: cpu.c  int.c  sse.asm  sse.c  sse.h
core/devices/: keyboard.c
core/include/: cpu.h  definitions.h  file.h  int.h  keyboard.h  maths.h  memory.h  ports.h  random.h  registers.h  setjmp.h  string.h  time.h  tty.h
core/memory/: memory.c
core/misc/: file.c  random.c  setjmp.c  string.c
core/video/: tty.c
docs/: code_style.md  index.md
drivers/: CMakeLists.txt  device.h
iso/: kirid  mybootcd.iso
kernel/: A20.asm  A20_OSDEV.asm  CMakeLists.txt  config.h  config.h.in  kernel.c
kernel/Drivers/ATA/: ata.c  ata.h
kernel/Drivers/Beeper/: beeper.h
kernel/Drivers/PCI/: get.h  pci.c  pci.h
kernel/Drivers/SATA/: sata.c  sata.h
kernel/Drivers/VGA/: main.c
kernel/Drivers/VGA/include/: CRTC.h  Display.h  VGA_DEF.h  main.h
kernel/Drivers/VGA/source/: main.c
kernel/Drivers/i8254/: main.c  main.h
kernel/Include/: A20.h  cpu.h  definitions.h  disk.h  io.h  keyboard.h  memory.h  string.h  time.h  vga.h
kernel/Shell/: Shell.c
kernel/Source/: disk.c  interrupts.c  keyboard.c  memory.c  string.c  vga.c
kernel/arch/aarch64/: settings.cmake
kernel/arch/aarch64/raspi3/: boot.s  settings.cmake
kernel/arch/amd64/: flags.cmake
kernel/arch/amd64/pc/: boot.asm  loader.c
kernel/arch/arm32/: settings.cmake
kernel/arch/arm32/devices/: uart.c
kernel/arch/arm32/include/: misc.h
kernel/arch/arm32/include/devices/: mmio.h  uart.h
kernel/arch/arm32/include/misc/: init_arch.h
kernel/arch/arm32/include/video/: tty.h
kernel/arch/arm32/raspi2/: boot.s  kernel.c  linker.ld  settings.cmake
kernel/arch/arm32/video/: tty.c
kernel/arch/i686/: crtn.asm  flags.cmake  kernel.c  settings.cmake
kernel/arch/i686/cpu/: cpu.c  gdt.asm  gdt.c  idt.asm  idt.c  isrs.asm  isrs.c
kernel/arch/i686/devices/ps2/keyboard/: keyboard.c
kernel/arch/i686/devices/serial/: serial.c
kernel/arch/i686/include/: ports.h  setjmp.h
kernel/arch/i686/include/cpu/: cpu.h  gdt.h  idt.h  isrs.h  registers.h  tss.h
kernel/arch/i686/include/devices/: platform-defaults.h  serial.h
kernel/arch/i686/include/devices/ps2/keyboard/: keyboard.h
kernel/arch/i686/include/misc/: init_arch.h
kernel/arch/i686/include/video/: tty.h
kernel/arch/i686/misc/: init_arch.c
kernel/arch/i686/pc/: boot.asm  settings.cmake
kernel/arch/i686/video/: setjmp.c  tty.c
kernel/cpu/: cpu.c
kernel/devices/: keyboard.c
kernel/devices/serial/: serial.c
kernel/include/: cpu.h  definitions.h  file.h  math.h  maths.h  memory.h  ports.h  random.h  registers.h  stdbool.h  stdint.h  stdio.h  stdlib.h  string.h  time.h
kernel/include/cpu/: gdt.h  idt.h  isrs.h  tss.h
kernel/include/devices/: device.h  device.h-old  keyboard.h  serial.h
kernel/include/libk/: stdio.h
kernel/include/misc/: tar.h
kernel/include/multiboot/: multiboot.h  multiboot2.h
kernel/include/video/: colors.h  tty.h
kernel/libc/: math.c  memory.c  stdio.c  stdlib.c  string.c
kernel/libc/stdio/: printf.c  scanf.c  sprintf.c  vsprintf.c
kernel/libk/: CMakeLists.txt  stdio.c  stdlib.c  string.c
kernel/libk/stdio/: printf.c
kernel/libssp/: ssp.c
kernel/memory/: memory.c
kernel/misc/: file.c  random.c  registers.asm  setjmp.c  stdio.c  stdlib.c  string.c
kernel/video/: tty.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  (+78 more)
(+123 files in other folders)
